--- a/index.html
+++ b/index.html
@@ -26,8 +26,29 @@
                     <div id="collapseOne" class="collapse schedule__body show" aria-labelledby="headingOne" data-parent="#accordionExample">
                         <div class="card-body">
 
+                            <div class="schedule__card">
+                                <div class="schedule__card-body">
+                                    <table class="schedule__table">
+                                        <thead>
+                                        <tr>
+                                            <td class="schedule__card-title"></td>
+                                            <td class="schedule__card-title" v-for="day in days">{{day.name}}</td>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr v-for="(eating, key, index) in eatingsMap">
+                                            <td><strong>{{eating.name}}</strong></td>
+                                            <td v-for="day in days">{{day.eatings[key]}}</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                    <a href="#" class="btn btn-primary schedule__btn">Скачать</a>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
+
                 </div>
                 <div class="card">
                     <div class="card-header" id="headingTwo">
@@ -37,11 +58,41 @@
                             </button>
                         </h5>
                     </div>
+
                     <div id="collapseTwo" class="collapse schedule__body" aria-labelledby="headingTwo" data-parent="#accordionExample">
                         <div class="card-body">
-                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                            <div class="container">
+                                <div class="row">
+
+                                    <div class="col-12">
+                                        <div class="schedule__card">
+                                            <div class="schedule__card-body">
+                                                <table class="schedule__table">
+                                                    <thead>
+                                                    <tr>
+                                                        <td class="schedule__card-title"></td>
+                                                        <td class="schedule__card-title">{{days['monday'].name}}</td>
+                                                        <td class="schedule__card-title">{{days['tuesday'].name}}</td>
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                    <tr v-for="(eating, key, index) in eatingsMap">
+                                                        <td><strong>{{eating.name}}</strong></td>
+                                                        <td>{{days['monday'].eatings[key]}}</td>
+                                                        <td>{{days['tuesday'].eatings[key]}}</td>
+                                                    </tr>
+                                                    </tbody>
+                                                </table>
+                                                <a href="#" class="btn btn-primary schedule__btn">Скачать</a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
                         </div>
                     </div>
+
                 </div>
                 <div class="card">
                     <div class="card-header" id="headingThree">
@@ -51,32 +102,41 @@
                             </button>
                         </h5>
                     </div>
+
                     <div id="collapseThree" class="collapse schedule__body" aria-labelledby="headingThree" data-parent="#accordionExample">
                         <div class="card-body">
                             <div class="container">
                                 <div class="row">
+
                                     <div class="col-12 col-md-4" v-for="day in days">
                                         <div class="schedule__card">
-                                            <h5 class="schedule__card-title">{{day.name}}</h5>
                                             <div class="schedule__card-body">
-                                                <div class="schedule__card-text">
-                                                    <table>
+                                                <table class="schedule__table">
+                                                        <thead>
+                                                        <tr>
+                                                            <td colspan="2" class="schedule__card-title">{{day.name}}</td>
+                                                        </tr>
+                                                        </thead>
                                                         <tbody>
                                                         <tr v-for="(eating, key, index) in day.eatings">
-                                                            <td>{{eatingsMap[key].name}}</td>
+                                                            <td>
+                                                                <div>{{eatingsMap[key].name}}</div>
+                                                                <div>{{eatingsMap[key].notice}}</div>
+                                                            </td>
                                                             <td>{{eating}}</td>
                                                         </tr>
                                                         </tbody>
                                                     </table>
-                                                </div>
-                                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                                <a href="#" class="btn btn-primary schedule__btn">Скачать</a>
                                             </div>
                                         </div>
                                     </div>
+
                                 </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -85,5 +145,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.js"></script>
+<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="js/script.js"></script>
 </html>
